--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <artifactId>DemoJPAService2019</artifactId>
+    <artifactId>DemoJPAServiceIJ</artifactId>
     <groupId>com.example.sapjpa</groupId>
     <modelVersion>4.0.0</modelVersion>
-    <name>DemoJPAService2019 Maven Webapp</name>
+    <name>DemoJPAServiceIJ Maven Webapp</name>
     <packaging>war</packaging>
     <version>4.0.0</version>
     <dependencies>
@@ -47,7 +47,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>DemoJPAService2019</finalName>
+        <finalName>DemoJPAServiceIJ</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -73,6 +73,6 @@
     </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.source>1.8</project.build.source>
+        <project.build.source>13</project.build.source>
     </properties>
 </project>
