feat: Versions bump, working.

--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <artifactId>DemoJPAServiceIJ</artifactId>
-    <groupId>com.example.sapjpa</groupId>
     <modelVersion>4.0.0</modelVersion>
-    <name>DemoJPAServiceIJ Maven Webapp</name>
+
+    <groupId>com.example.sapjpa</groupId>
+    <artifactId>DemoJPAServiceIJ</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <version>4.0.0</version>
+
+    <name>DemoJPAServiceIJ Maven Webapp</name>
+    <!-- FIXME change it to the project's website -->
+    <url>http://www.example.com</url>
+
     <dependencies>
         <dependency>
             <groupId>com.sap.olingo</groupId>
-            <artifactId>odata-jpa-processor</artifactId>
-            <version>0.3.7-SNAPSHOT</version>
+            <artifactId>odata4-jpa-processor</artifactId>
+            <version>0.3.8</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -21,11 +26,6 @@
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
             <version>2.7.5</version>
-        </dependency>
-                <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>javax.persistence</artifactId>
-            <version>2.2.1</version>
         </dependency>
 
         <dependency>
@@ -40,9 +40,9 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.6.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -51,7 +51,6 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
                     <configuration>
@@ -59,8 +58,8 @@
                         <encoding>UTF-8</encoding>
                         <showDeprecation>true</showDeprecation>
                         <showWarnings>true</showWarnings>
-                        <source>${project.build.source}</source>
-                        <target>${project.build.source}</target>
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
                     </configuration>
                 </plugin>
             </plugins>
@@ -68,6 +67,7 @@
     </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.source>13</project.build.source>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 </project>
