--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>com.example.sapjpa</groupId>
     <artifactId>DemoOdataService</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>Demo Odata4 Service</name>
+    <name>Demo JPA based Odata4 Service</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
@@ -50,7 +50,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>DemoJPAServiceIJ</finalName>
+        <finalName>DemoOdata4Service</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
