--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,12 @@
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>eclipselink</artifactId>
 			<version>2.7.6</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
-			<version>6.2.3</version>
+			<version>6.3.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
@@ -42,7 +43,7 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.6.0</version>
+			<version>5.6.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -72,10 +73,10 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<repositories>
-		<repository>
+		<!--<repository>
 			<id>io.cloudrepo</id>
 			<url>https://odata4-professor.mycloudrepo.io/repositories/odata4-jpa</url>
 			<releases/>
-		</repository>
+		</repository>-->
 	</repositories>
 </project>
