--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,12 @@
 			<version>4.0.3</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>eclipselink</artifactId>
+			<artifactId>org.eclipse.persistence.jpa</artifactId>
 			<version>2.7.6</version>
-			<!--<scope>provided</scope>-->
+
 		</dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
