--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>org.eclipse.persistence.jpa</artifactId>
-			<version>2.7.6</version>
+			<version>3.0.0-M1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
-			<version>6.4.0</version>
+			<version>6.4.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
