feat: Saving working. Demo version 01.

--- a/pom.xml
+++ b/pom.xml
@@ -14,21 +14,16 @@
     <url>http://www.example.com</url>
 
     <dependencies>
-        <!--<dependency>
-            <groupId>org.apache.olingo</groupId>
-            <artifactId>odata-commons-api</artifactId>
-            <version>4.8.0</version>
-        </dependency>-->
-
         <dependency>
             <groupId>nl.buildforce.sequoia</groupId>
             <artifactId>odata4-jpa-processor</artifactId>
-            <version>0.3.8.0</version>
+            <version>0.3.8-M0</version>
         </dependency>
+
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
-            <version>4.0.3</version>
+            <version>5.0.0-M1</version>
             <scope>provided</scope>
         </dependency>
 
@@ -40,7 +35,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>6.4.2</version>
+            <version>6.4.4</version>
         </dependency>
         <dependency>
             <groupId>org.hsqldb</groupId>
@@ -55,7 +50,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>DemoOdata4Service</finalName>
+       <finalName>ContextPath</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
