--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example.sapjpa</groupId>
-    <artifactId>DemoOdataService</artifactId>
+    <artifactId>DemoOdataJPAWebContainer</artifactId>
     <version>0.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
