feat: Saving work,working order. Demo version 13.

--- a/src/main/webapp/X0003Attendance/manifest.json
+++ b/src/main/webapp/X0003Attendance/manifest.json
@@ -75,7 +75,7 @@
           "target": ["EmployeeOverviewContent"]
         },
         {
-          "pattern": "detail",
+          "pattern": "detail/{invoicePath}",
           "name": "detail",
           "target": ["detail"]
         }
