feat: Saving work, working order. Demo version 17.

--- a/src/main/webapp/Walkthrough26/manifest.json
+++ b/src/main/webapp/Walkthrough26/manifest.json
@@ -14,8 +14,8 @@
 		"description": "{{appDescription}}",
 		"i18n": {
 			"bundleUrl": "i18n/i18n.properties",
-			"supportedLocales": [""],
-			"fallbackLocale": ""
+			"fallbackLocale": "",
+			"supportedLocales": [""]
 		},
 		"id": "sap.ui.demo.walkthrough",
 		"title": "{{appTitle}}",
