--- a/pom.xml
+++ b/pom.xml
@@ -14,17 +14,24 @@
     <url>http://www.example.com</url>
 
     <dependencies>
+
         <dependency>
-            <groupId>nl.buildforce.sequoia</groupId>
-            <artifactId>odata4-jpa-processor</artifactId>
-            <version>0.3.8-M0</version>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.0.0-RC2</version>
         </dependency>
 
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
-            <version>5.0.0-M1</version>
+            <version>5.0.0-M2</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>nl.buildforce.sequoia</groupId>
+            <artifactId>odata4-jpa-processor</artifactId>
+            <version>0.3.8-M0</version>
         </dependency>
 
         <dependency>
@@ -35,12 +42,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>6.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>2.13.3</version>
+            <version>6.5.3</version>
         </dependency>
 
         <dependency>
@@ -48,12 +50,20 @@
             <artifactId>hsqldb</artifactId>
             <version>2.5.1</version>
         </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.7.0-M1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+
     </dependencies>
     <build>
        <finalName>ContextPath</finalName>
