--- a/src/main/webapp/Walkthrough37/manifest.json
+++ b/src/main/webapp/Walkthrough37/manifest.json
@@ -14,8 +14,8 @@
     "description": "{{appDescription}}",
     "i18n": {
       "bundleUrl": "i18n/i18n.properties",
-			"supportedLocales": [""],
-      "fallbackLocale": ""
+      "fallbackLocale": "",
+      "supportedLocales": [""]
     },
     "id": "sap.ui.demo.walkthrough",
     "title": "{{appTitle}}",
@@ -60,8 +60,9 @@
         "type": "sap.ui.model.resource.ResourceModel",
         "settings": {
           "bundleName": "sap.ui.demo.walkthrough.i18n.i18n",
-          "supportedLocales": [""],
-          "fallbackLocale": ""
+          "fallbackLocale": "",
+          "supportedLocales": [""]
+
         }
       }
     },
