--- a/src/main/webapp/sap.ui.core.tutorial.odatav4.02/manifest.json
+++ b/src/main/webapp/sap.ui.core.tutorial.odatav4.02/manifest.json
@@ -1,20 +1,7 @@
 {
 	"_version": "1.21.0",
 	"sap.app": {
-		"id": "sap.ui.core.tutorial.odatav4",
-		"type": "application",
-		"i18n": {
-			"bundleUrl": "i18n/i18n.properties",
-			"supportedLocales": [
-				""
-			],
-			"fallbackLocale": ""
-		},
-		"applicationVersion": {
-			"version": "1.0.0"
-		},
-		"title": "{{appTitle}}",
-		"description": "{{appDescription}}",
+		"applicationVersion": {"version": "1.0.0"},
 		"dataSources": {
 			"default": {
 				"uri": "https://cors-anywhere.herokuapp.com/https://services.odata.org/TripPinRESTierService/(S(0m1hkqy5kzmpz1xxhqwjihdk))/",
@@ -23,7 +10,11 @@
 					"odataVersion": "4.0"
 				}
 			}
-		}
+		},
+		"description": "{{appDescription}}",
+		"i18n": {"bundleUrl": "i18n/i18n.properties", "supportedLocales": [""], "fallbackLocale": ""},
+		"title": "{{appTitle}}",
+		"type": "application"
 	},
 	"sap.ui": {
 		"deviceTypes": {
@@ -60,18 +51,16 @@
 				"i18n": {"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
 					"bundleName": "sap.ui.core.tutorial.odatav4.i18n.i18n",
-					"supportedLocales": [
-						""
-					],
+					"supportedLocales": [""],
 					"fallbackLocale": ""
 				}
 			}
 		},
 
 		"rootView": {
+			"async": true,
 			"viewName": "sap.ui.core.tutorial.odatav4.view.App",
 			"type": "XML",
-			"async": true,
 			"id": "appView"
 		}
 	}
