--- a/src/main/webapp/sap.ui.core.tutorial.odatav4.02/manifest.json
+++ b/src/main/webapp/sap.ui.core.tutorial.odatav4.02/manifest.json
@@ -4,7 +4,7 @@
 		"applicationVersion": {"version": "1.0.0"},
 		"dataSources": {
 			"default": {
-				"uri": "https://cors-anywhere.herokuapp.com/https://services.odata.org/TripPinRESTierService/(S(0m1hkqy5kzmpz1xxhqwjihdk))/",
+				"uri": "/ContextPath/ServletPath.svc/",
 				"type": "OData",
 				"settings": {
 					"odataVersion": "4.0"
