--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### Maven template
 target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
 
 ### Scala template
 *.class
@@ -21,9 +11,6 @@ buildNumber.properties
 .DS_Store
 .AppleDouble
 .LSOverride
-
-# Icon must end with two \r
-Icon
 
 # Thumbnails
 ._*
@@ -38,6 +25,8 @@ Icon
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+/.idea/
+/DemoOdataService.iml
 
 # Generated files
 .idea/**/contentModel.xml
@@ -194,5 +183,12 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
-/.idea/
-/DemoOdataService.iml
+
+.run/
+DemoOdataJPAWebContainer.iml
+GreentrakData/DevoGreentrak00.lck
+GreentrakData/DevoGreentrak00.properties
+GreentrakData/DevoGreentrak00.script
+createDDL.jdbc
+dropDDL.jdbc
+src/main/webapp/public/mime/icon/
