--- a/src/main/webapp/Berg/manifest.json
+++ b/src/main/webapp/Berg/manifest.json
@@ -1,14 +1,7 @@
 {
-  "_version": "1.15.0",
-  "start_url": "index.html",
+  "_version": "1.21.0",
   "sap.app": {
-    "id": "demo",
-    "type": "application",
-    "title": "Demo",
-    "description": "Sample Code",
-    "applicationVersion": {
-      "version": "1.0.0"
-    },
+    "applicationVersion": {"version": "1.0.0"},
     "dataSources": {
       "myDataSource": {
         "uri": "https://cors-anywhere.herokuapp.com/https://services.odata.org/TripPinRESTierService/(S(0m1hkqy5kzmpz1xxhqwjihdk))/",
@@ -17,40 +10,42 @@
           "odataVersion": "4.0"
         }
       }
-    }
+    },
+    "description": "Sample Code",
+    "title": "Demo",
+    "type": "application"
   },
   "sap.ui": {
-    "technology": "UI5",
     "deviceTypes": {
       "desktop": true,
-      "tablet": true,
-      "phone": true
-    }
+      "phone": true,
+      "tablet": true
+    },
+    "technology": "UI5"
   },
   "sap.ui5": {
-    "handleValidation": true,
-    "dependencies": {
-      "minUI5Version": "1.77.2",
-      "libs": {
-        "sap.m": {},
-        "sap.f": {},
-        "sap.ui.layout": {},
-        "sap.ui.unified": {}
-      }
-    },
     "contentDensities": {
       "compact": true,
       "cozy": true
     },
+    "dependencies": {
+      "minUI5Version": "1.79.2",
+      "libs": {
+        "sap.m": {},
+        "sap.ui.layout": {}
+      }
+    },
+    "_comment": "handleValidation enables Form Field Validation",
+    "handleValidation": true,
     "models": {
       "": {
         "dataSource": "myDataSource",
+        "preload": true,
         "settings": {
           "autoExpandSelect": true,
           "operationMode": "Server",
           "synchronizationMode": "None"
-        },
-        "preload": true
+        }
       },
       "detailViewModel": {
         "type": "sap.ui.model.json.JSONModel"
@@ -64,11 +59,11 @@
     },
     "routing": {
       "config": {
-        "routerClass": "sap.m.routing.Router",
         "async": true,
-        "viewType": "XML",
+        "controlId": "rootSplitContainer",
+        "routerClass": "sap.m.routing.Router",
         "viewPath": "demo.view",
-        "controlId": "rootSplitContainer"
+        "viewType": "XML"
       },
       "routes": {
         "master": {
