feat: User UI. Working order, no update function. Demo version 40.

--- a/src/main/webapp/A9999Users/manifest.json
+++ b/src/main/webapp/A9999Users/manifest.json
@@ -73,18 +73,16 @@
         "viewPath": "sap.ui.demo.basicTemplate.view",
         "viewType": "XML"
       },
-      "routes": [
-        {
-          "name": "RouteMain",
+      "routes": {
+        "RouteMain": {
           "pattern": "",
           "target": "targetMaster"
         },
-        {
-          "name": "Detail",
+        "Detail": {
           "pattern": "Detail/{employeePath}",
           "target": ["targetDetail"]
         }
-      ],
+      },
       "targets": {
         "targetMaster": {
           "viewId": "home",
