--- a/src/main/webapp/Boghyon2/manifest.json
+++ b/src/main/webapp/Boghyon2/manifest.json
@@ -1,7 +1,13 @@
 {
   "_version": "1.25.0",
   "sap.app": {
-    "applicationVersion": {"version": "1.0.0"},
+    "id": "demo",
+    "type": "application",
+    "title": "Demo",
+    "description": "Sample Code",
+    "applicationVersion": {
+      "version": "1.0.0"
+    },
     "dataSources": {
       "myDataSource": {
         "uri": "/ContextPath/ServletPath.svc/",
@@ -10,42 +16,40 @@
           "odataVersion": "4.0"
         }
       }
-    },
-    "description": "Sample Code",
-    "title": "Demo",
-    "type": "application"
+    }
   },
   "sap.ui": {
+    "technology": "UI5",
     "deviceTypes": {
       "desktop": true,
-      "phone": true,
-      "tablet": true
-    },
-    "technology": "UI5"
+      "tablet": true,
+      "phone": true
+    }
   },
   "sap.ui5": {
+    "handleValidation": true,
+    "dependencies": {
+      "minUI5Version": "1.77.2",
+      "libs": {
+        "sap.m": {},
+        "sap.f": {},
+        "sap.ui.layout": {},
+        "sap.ui.unified": {}
+      }
+    },
     "contentDensities": {
       "compact": true,
       "cozy": true
     },
-    "dependencies": {
-      "minUI5Version": "1.79.2",
-      "libs": {
-        "sap.m": {},
-        "sap.ui.layout": {}
-      }
-    },
-    "_comment": "handleValidation enables Form Field Validation",
-    "handleValidation": true,
     "models": {
       "": {
         "dataSource": "myDataSource",
-        "preload": true,
         "settings": {
           "autoExpandSelect": true,
           "operationMode": "Server",
           "synchronizationMode": "None"
-        }
+        },
+        "preload": true
       },
       "detailViewModel": {
         "type": "sap.ui.model.json.JSONModel"
@@ -59,20 +63,27 @@
     },
     "routing": {
       "config": {
+        "routerClass": "sap.f.routing.Router",
         "async": true,
-        "controlId": "rootSplitContainer",
-        "routerClass": "sap.m.routing.Router",
+        "viewType": "XML",
         "viewPath": "demo.view",
-        "viewType": "XML"
+        "controlId": "flexibleColumnLayout"
       },
       "routes": {
         "master": {
           "pattern": "",
-        "target": ["emptyDetail", "master"]
+          "target": [
+            "master"
+          ],
+          "layout": "OneColumn"
         },
         "masterDetail": {
           "pattern": "user/{userName}",
-          "target": ["detail", "master"]
+          "target": [
+            "master",
+            "detail"
+          ],
+          "layout": "TwoColumnsMidExpanded"
         }
       },
       "targets": {
@@ -80,19 +91,14 @@
           "viewId": "masterView",
           "viewName": "Master",
           "viewLevel": 1,
-          "controlAggregation": "masterPages"
+          "controlAggregation": "beginColumnPages"
         },
         "detail": {
           "viewId": "detailView",
           "viewName": "Detail",
-          "controlAggregation": "detailPages",
+          "controlAggregation": "midColumnPages",
           "viewLevel": 2,
           "transition": "show"
-        },
-        "emptyDetail": {
-          "viewId": "emptyDetailView",
-          "viewName": "EmptyDetail",
-          "controlAggregation": "detailPages"
         }
       }
     }
